submit new layout

--- a/our-story.html
+++ b/our-story.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Babette</title>
+  <title>Optikey</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -29,23 +29,14 @@
           <button class="navbar-toggler" type="button">
             <span class="menu-lines"><span></span></span>
           </button>
+          
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav ml-auto">
               <li class="nav__item with-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link active">Home</a>
-                <ul class="dropdown-menu">
-                  <li class="nav__item"><a href="index.html" class="nav__item-link">Home Main</a></li>
-                  <!-- /.nav-item -->
-                  <li class="nav__item"><a href="home-gourmet.html" class="nav__item-link">Home Gourmet</a></li>
-                  <!-- /.nav-item -->
-                  <li class="nav__item"><a href="home-classic.html" class="nav__item-link">Home Classic</a></li>
-                  <!-- /.nav-item -->
-                  <li class="nav__item"><a href="home-cafe.html" class="nav__item-link">Home Cafe</a></li>
-                  <!-- /.nav-item -->
-                </ul><!-- /.dropdown-menu -->
+                <a href="index.html" class="dropdown-toggle nav__item-link ">Home</a>
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">About</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link active">About</a>
                 <ul class="dropdown-menu">
                   <li class="nav__item"><a href="our-story.html" class="nav__item-link">About Us</a></li>
                   <!-- /.nav-item -->
@@ -63,55 +54,20 @@
                 </ul><!-- /.dropdown-menu -->
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Menu</a>
-                <ul class="dropdown-menu">
-                  <li class="nav__item"><a href="menu-classic.html" class="nav__item-link">Menu Classic</a></li>
-                  <!-- /.nav-item -->
-                  <li class="nav__item"><a href="menu-mixed.html" class="nav__item-link">Menu Mixed</a></li>
-                  <!-- /.nav-item -->
-                  <li class="nav__item"><a href="menu-board.html" class="nav__item-link">Menu Board</a></li>
-                  <!-- /.nav-item -->
-                  <li class="nav__item"><a href="menu-gallery.html" class="nav__item-link">Menu Gallery</a></li>
-                  <!-- /.nav-item -->
-                </ul><!-- /.dropdown-menu -->
+                <a href="menu-board.html" class="dropdown-toggle nav__item-link">Menu</a>
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Gallery</a>
-                <ul class="dropdown-menu">
-                  <li class="nav__item"><a href="gallery-grid.html" class="nav__item-link">Gallery grid</a></li>
-                  <!-- /.nav-item -->
-                  <li class="nav__item"><a href="gallery-fullwidth.html" class="nav__item-link">Gallery Fullwidth</a>
-                  </li><!-- /.nav-item -->
-                </ul><!-- /.dropdown-menu -->
+                <a href="gallery-grid.html" class="dropdown-toggle nav__item-link">Gallery</a>
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Blog</a>
-                <ul class="dropdown-menu">
-                  <li class="nav__item"><a href="blog-carousel.html" class="nav__item-link">blog carousel</a></li>
-                  <li class="nav__item dropdown-submenu">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Blog Grid</a>
-                    <ul class="dropdown-menu">
-                      <li class="nav__item">
-                        <a href="blog-grid-sidebar.html" class="nav__item-link">Grid Sidebar</a>
-                      </li><!-- /.nav-item -->
-                      <li class="nav__item">
-                        <a href="blog-grid.html" class="nav__item-link">No Sidebar</a>
-                      </li><!-- /.nav-item -->
-                    </ul><!-- /.dropdown-menu -->
-                  </li><!-- /.nav-item -->
-                  <li class="nav__item"><a href="blog-standard.html" class="nav__item-link">blog standard</a></li>
-                  <!-- /.nav-item -->
-                  <li class="nav__item"><a href="blog-single-post.html" class="nav__item-link">single post</a></li>
-                  <!-- /.nav-item -->
-                </ul><!-- /.dropdown-menu -->
+                <a href="blog-standard.html" class="dropdown-toggle nav__item-link">Blog</a>
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Shop</a>
                 <ul class="dropdown-menu">
                   <li class="nav__item"><a href="shop.html" class="nav__item-link">our Shop</a></li>
                   <!-- /.nav-item -->
-                  <li class="nav__item"><a href="shop-sidebar.html" class="nav__item-link">Shop with Sidebar</a></li>
-                  <!-- /.nav-item -->
+
                   <li class="nav__item"><a href="shop-single-product.html" class="nav__item-link">Single Product</a>
                   </li><!-- /.nav-item -->
                   <li class="nav__item"><a href="shopping-cart.html" class="nav__item-link">cart</a></li>
@@ -121,11 +77,11 @@
               <!-- /.nav-item -->
             </ul><!-- /.navbar-nav -->
           </div><!-- /.navbar-collapse -->
+
           <div class="navbar-actions-wrap">
             <div class="navbar-actions d-flex align-items-center">
               <a href="#" class="navbar__action-btn search-popup-trigger"><i class="fa fa-search"></i></a>
-              <a href="reservation.html"
-                class="navbar__action-btn navbar__action-btn-reserve btn btn__primary">Reservation</a>
+
               <ul class="social__icons">
                 <li><a href="#"><i class="fa fa-tripadvisor"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -620,7 +576,8 @@
                 <p class="mb-20">Babette was designed with the history in mind we have created a soft industrial dining
                   room, combined with an open kitchen, coffee take out bar and alovely awesome on site coffee roastery.
                 </p>
-                <a href="reservation.html" class="btn btn__primary btn__bordered btn__lg">Book Your Table Now!</a>
+                <a href="shop.html" class="btn btn__primary btn__bordered btn__lg">Order Now</a>
+
               </div><!-- /.col-lg-6 -->
             </div><!-- /.row -->
           </div><!-- /.footer-middle -->
@@ -630,8 +587,8 @@
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-12">
                 <div class="footer__copyright mb-30">
-                  <span>&copy; Babette, With Love by </span>
-                  <a href="http://themeforest.net/user/7oroof" class="color-theme">7oroof.com</a>
+                  <span>&copy; Optikey, With Love by </span>
+                  <a href="http://themeforest.net/user/7oroof" class="color-theme">Optikey</a>
                 </div>
                 <ul class="social__icons social__icons-white justify-content-center">
                   <li><a href="#"><i class="fa fa-instagram"></i></a></li>
