--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Food</title>
+  <title>Optikey</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav ml-auto">
               <li class="nav__item with-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link ">Home</a>
+                <a href="#" class="dropdown-toggle nav__item-link active ">Home</a>
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">About</a>
@@ -54,7 +54,6 @@
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
                 <a href="menu-board.html" class="dropdown-toggle nav__item-link">Menu</a>
-
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
                 <a href="gallery-grid.html" class="dropdown-toggle nav__item-link">Gallery</a>
@@ -335,7 +334,8 @@
                 <p class="mb-20">Babette was designed with the history in mind we have created a soft industrial dining
                   room, combined with an open kitchen, coffee take out bar and alovely awesome on site coffee roastery.
                 </p>
-                <a href="reservation.html" class="btn btn__primary btn__bordered btn__lg">Book Your Table Now!</a>
+                <a href="shop.html" class="btn btn__primary btn__bordered btn__lg">Order Now</a>
+
               </div><!-- /.col-lg-6 -->
             </div><!-- /.row -->
           </div><!-- /.footer-middle -->
@@ -345,8 +345,8 @@
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-12">
                 <div class="footer__copyright mb-30">
-                  <span>&copy; Babette, With Love by </span>
-                  <a href="http://themeforest.net/user/7oroof" class="color-theme">7oroof.com</a>
+                  <span>&copy; Optikey, With Love by </span>
+                  <a href="http://themeforest.net/user/7oroof" class="color-theme">Optikey</a>
                 </div>
                 <ul class="social__icons social__icons-white justify-content-center">
                   <li><a href="#"><i class="fa fa-instagram"></i></a></li>
