--- a/gallery-grid.html
+++ b/gallery-grid.html
@@ -19,7 +19,7 @@
     <!-- =========================
         Header
     =========================== -->
-    <header id="header" class="header header-transparent header-layout1">
+    <header id="header" class="header header-transparent header-layout4">
       <nav class="navbar navbar-expand-lg sticky-navbar">
         <div class="container">
           <a class="navbar-brand" href="index.html">
@@ -29,62 +29,56 @@
           <button class="navbar-toggler" type="button">
             <span class="menu-lines"><span></span></span>
           </button>
-          
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav ml-auto">
               <li class="nav__item with-dropdown">
-                <a href="index.html" class="dropdown-toggle nav__item-link ">Home</a>
+                <a href="#" class="dropdown-toggle nav__item-link active ">Trang chủ</a>
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link ">About</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Thông tin</a>
                 <ul class="dropdown-menu">
-                  <li class="nav__item"><a href="our-story.html" class="nav__item-link">About Us</a></li>
+                  <li class="nav__item"><a href="our-story.html" class="nav__item-link">Về chúng tôi</a></li>
                   <!-- /.nav-item -->
-                  <li class="nav__item"><a href="our-chefs.html" class="nav__item-link">Our chefs</a></li>
+                  <li class="nav__item"><a href="our-chefs.html" class="nav__item-link">Đầu bếp</a></li>
                   <!-- /.nav-item -->
-                  <li class="nav__item"><a href="our-guestbook.html" class="nav__item-link">Our Guestbook</a></li>
+                  <li class="nav__item"><a href="our-guestbook.html" class="nav__item-link">Sổ tay KH</a></li>
                   <!-- /.nav-item -->
-                  <li class="nav__item"><a href="contacts.html" class="nav__item-link">Contact Us</a></li>
+                  <li class="nav__item"><a href="contacts.html" class="nav__item-link">Liên Hệ</a></li>
                   <!-- /.nav-item -->
-                  <li class="nav__item"><a href="events.html" class="nav__item-link">Events</a></li>
+                  <li class="nav__item"><a href="events.html" class="nav__item-link">Sự kiện</a></li>
                   <!-- /.nav-item -->
-                  <li class="nav__item"><a href="event-single.html" class="nav__item-link">Event Single</a></li>
+                  <li class="nav__item"><a href="event-single.html" class="nav__item-link">Sự kiện đặc biệt</a></li>
                   <!-- /.nav-item -->
                   <li class="nav__item"><a href="faqs.html" class="nav__item-link">FAQs</a></li> <!-- /.nav-item -->
                 </ul><!-- /.dropdown-menu -->
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
-                <a href="menu-board.html" class="dropdown-toggle nav__item-link ">Menu</a>
+                <a href="menu-board.html" class="dropdown-toggle nav__item-link">Thực Đơn</a>
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
-                <a href="gallery-grid.html" class="dropdown-toggle nav__item-link active ">Gallery</a>
+                <a href="gallery-grid.html" class="dropdown-toggle nav__item-link">Thư Viện</a>
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
-                <a href="blog-standard.html" class="dropdown-toggle nav__item-link">Blog</a>
+                <a href="blog-standard.html" class="dropdown-toggle nav__item-link">Bài viết</a>
               </li><!-- /.nav-item -->
               <li class="nav__item with-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Shop</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Mua hàng</a>
                 <ul class="dropdown-menu">
-                  <li class="nav__item"><a href="shop.html" class="nav__item-link">our Shop</a></li>
+                  <li class="nav__item"><a href="shop.html" class="nav__item-link">Sản phẩm</a></li>
                   <!-- /.nav-item -->
 
-                  <li class="nav__item"><a href="shop-single-product.html" class="nav__item-link">Single Product</a>
-                  </li><!-- /.nav-item -->
-                  <li class="nav__item"><a href="shopping-cart.html" class="nav__item-link">cart</a></li>
+
+                  <li class="nav__item"><a href="shopping-cart.html" class="nav__item-link">Thanh toán</a></li>
                   <!-- /.nav-item -->
                 </ul><!-- /.dropdown-menu -->
               </li><!-- /.nav-item -->
               <!-- /.nav-item -->
             </ul><!-- /.navbar-nav -->
           </div><!-- /.navbar-collapse -->
-
           <div class="navbar-actions-wrap">
             <div class="navbar-actions d-flex align-items-center">
               <a href="#" class="navbar__action-btn search-popup-trigger"><i class="fa fa-search"></i></a>
-              <ul class="social__icons">
-                <li><a href="#"><i class="fa fa-tripadvisor"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              </ul><!-- /.social__icons -->
+
             </div><!-- /.navbar-actions -->
           </div><!-- /.navbar-actions-wrap -->
         </div><!-- /.container -->
@@ -260,27 +254,27 @@
               </div><!-- /.col-lg-12 -->
               <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="contact-box">
-                  <h6 class="contact__box-title">Our Address</h6>
+                  <h6 class="contact__box-title">Địa chỉ</h6>
                   <ul class="contact__box-list list-unstyled">
-                    <li>22 Alnahas Building, 2 AlBahr St, Tanta Al-Gharbia Governorate, Egypt</li>
+                    <li>KDC CityLane Phan văn trị P11 Quận Gò Vấp TPHCM</li>
                   </ul>
                 </div><!-- /.contact-box -->
               </div><!-- /.col-lg-4 -->
               <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="contact-box">
-                  <h6 class="contact__box-title">Opening Hours</h6>
+                  <h6 class="contact__box-title">Giờ mở cửa</h6>
                   <ul class="contact__box-list list-unstyled">
-                    <li>Mon - Fri: 10 AM - 11 PM</li>
-                    <li>Sat - Sun: 9 AM - 1 PM</li>
+                    <li>Thứ 2 - Thứ 6: 10h Sáng - 6h chiều</li>
+                    <li>Thứ 7 - Chủ nhật: 000</li>
                   </ul>
                 </div><!-- /.contact-box -->
               </div><!-- /.col-lg-4 -->
               <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="contact-box">
-                  <h6 class="contact__box-title">Private Dinning</h6>
+                  <h6 class="contact__box-title">Liên hệ đặt bàn</h6>
                   <ul class="contact__box-list list-unstyled">
-                    <li><span>Main Email:</span><a href="mailto:Babette@7oroof.com">Babette@7oroof.com</a></li>
-                    <li><span>Phone:</span><a href="tel:020101236547">02 0101236547</a></li>
+                    <li><span>Email:</span><a href="mailto:Babette@7oroof.com">optikes@7oroof.com</a></li>
+                    <li><span>Số Điện Thoại:</span><a href="tel:020101236547">0000000</a></li>
                   </ul>
                 </div><!-- /.contact-box -->
               </div><!-- /.col-lg-4 -->
@@ -296,8 +290,7 @@
             </div><!-- /.row -->
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
-                <p class="mb-20">Babette was designed with the history in mind we have created a soft industrial dining
-                  room, combined with an open kitchen, coffee take out bar and alovely awesome on site coffee roastery.
+                <p class="mb-20">Chúng tôi mong muốn phục vụ và hỗ trợ bạn bằng tất cả sự tận tâm.
                 </p>
                 <a href="shop.html" class="btn btn__primary btn__bordered btn__lg">Order Now</a>
 
