--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -566,7 +566,7 @@
   </div>
   <!-- /.wrapper -->
   
-  <div class="plus-modal open">
+  <div class="plus-modal">
     <div class="plus-modal-container">
       <header class="plus-modal__header">
         <h4>Thanh toán thành công</h4>
