--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -571,7 +571,9 @@
       <header class="plus-modal__header">
         <h4>Thanh toán thành công</h4>
       </header>
-
+       <div class ="plus-modal__body" > 
+         <p> lorem ipsum abcdefghjklmjfjdueow </p>
+       </div>
       <div class = "modal-close"> Tiêp tục mua hàng </div>
 
       
